# app/Http/Controllers/Api/PromoCodeController.php
@@ -7,25 +7,19 @@ use App\Http\Controllers\Controller;
 use App\Http\Resources\PromoCodeResource;
 use App\Models\PromoCode;
 use Illuminate\Http\Request;
+use PhpParser\Node\Expr\FuncCall;
 
 class PromoCodeController extends SuperController
 {
     public $whichModel;
     public $responseResource;
 
-    public function __construct()
-    {
-        $this->whichModel = PromoCode::class;
-        $this->responseResource = PromoCodeResource::class;
-        parent::__construct($this->whichModel, $this->responseResource);
-    }
-
     /**
      * @OA\Get(
-     *   path="/promo-codes",
-     *   tags={"promo-codes"},
-     *   operationId="promo-codes list",
-     * summary="Promo List",
+     *   path="/offers",
+     *   tags={"Offers"},
+     *   operationId="offers list",
+     * summary="offers List",
      *
      *   @OA\Response(
      *      response=200,
@@ -36,10 +30,45 @@ class PromoCodeController extends SuperController
      *   )
      *)
      **/
-    public function create()
+
+    public function __construct()
     {
-        
+        $this->whichModel = PromoCode::class;
+        $this->responseResource = PromoCodeResource::class;
+        parent::__construct($this->whichModel, $this->responseResource);
     }
+
+    /**
+     * @OA\Get(
+     *   path="/offers/{id}",
+     *   tags={"Offers"},
+     *   operationId="offers show",
+     * summary="offers show",
+     *
+     * @OA\Parameter(
+     *      name="id",
+     *      in="path",
+     *      required=true,
+     *      @OA\Schema(
+     *           type="integer",
+     *      )
+     *   ),
+     *   @OA\Response(
+     *      response=200,
+     *       description="Success",
+     *      @OA\MediaType(
+     *           mediaType="application/json",
+     *      )
+     *   )
+     *)
+     **/
+
+     public function show($id)
+     {
+        $success['data'] = $this->whichModel::find($id);
+        return response()->json($success, 200);
+     }
+
     
    
 }
